--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.0.1",
     "react-test-renderer": "16.6.3",
     "redux": "4.0.1",
+    "socket.io-client": "^2.2.0",
     "superagent": "4.0.0-beta.5"
   },
   "devDependencies": {
